--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,9 @@
 <h2>This is the index page</h2>
 
+<%= link_to "Sign in with Facebook", "/auth/facebook" %>
+
     <div class="other-links">
       <%= button_to "Sign Out", sign_out_path, method: :delete %>
     </div>
+
+    
