--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -1,4 +1,11 @@
 
+<% flash.each do |key, value| %>
+      <div class="<%= flash_class(key.to_sym) %>">
+            <%= value %>
+      </div>
+<% end %>
+
+
 <div class="container">
   <h2>Your reservation :</h2>           
   <table class="table table-hover">
@@ -16,6 +23,9 @@
         <td><%= resa.listing_id %></td>
         <td><%= resa.start_date %></td>
         <td><%= resa.end_date %></td>
+        <td><%= link_to "Make Payment", braintree_new_path %></td>
+
+        
       </tr>
     </tbody>
     <%end%>
