--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -26,7 +26,7 @@
 
 
 
-    <div>
+    <div style="margin-top: 48px; margin-bottom: 48px;">
       <div class="col-xs-6 col-sm-4 col-md-4 col-lg-4">
     
       
