--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,101 +14,15 @@
  */
 @import "bootstrap-sprockets";
 @import "bootstrap";
-
-body { magin:auto;
-background-color: blue}
+@import "braintree";
 
 
-.hosted-field {
-  height: 50px;
-  box-sizing: border-box;
-  width: 100%;
-  padding: 12px;
-  display: inline-block;
-  box-shadow: none;
-  font-weight: 600;
-  font-size: 14px;
-  border-radius: 6px;
-  border: 1px solid #dddddd;
-  line-height: 20px;
-  background: #fcfcfc;
-  margin-bottom: 12px;
-  background: linear-gradient(to right, white 50%, #fcfcfc 50%);
-  background-size: 200% 100%;
-  background-position: right bottom;
-  transition: all 300ms ease-in-out;
+
+
+
+.centrer{
+  margin:auto;
 }
-
-.hosted-fields--label {
-  font-family: courier, monospace;
-  text-transform: uppercase;
-  font-size: 14px;
-  display: block;
-  margin-bottom: 6px;
-}
-
-.button-container {
-  display: block;
-  text-align: center;
-}
-
-.button {
-  cursor: pointer;
-  font-weight: 500;
-  line-height: inherit;
-  position: relative;
-  text-decoration: none;
-  text-align: center;
-  border-style: solid;
-  border-width: 1px;
-  border-radius: 3px;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  display: inline-block;
-}
-
-.button--small {
-  padding: 10px 20px;
-  font-size: 0.875rem;
-}
-
-.button--green {
-  outline: none;
-  background-color: #64d18a;
-  border-color: #64d18a;
-  color: white;
-  transition: all 200ms ease;
-}
-
-.button--green:hover {
-  background-color: #8bdda8;
-  color: white;
-}
-
-.braintree-hosted-fields-focused {
-  border: 1px solid #64d18a;
-  border-radius: 1px;
-  background-position: left bottom;
-}
-
-.braintree-hosted-fields-invalid {
-  border: 1px solid #ed574a;
-}
-
-.braintree-hosted-fields-valid {
-}
-
-#cardForm {
-  max-width: 50.75em;
-  margin: 0 auto;
-  padding: 1.875em;
-}// Place all the styles related to the Braintree controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
-
-
-
-
 
 .listing {
 
@@ -170,7 +84,6 @@ background-color: blue}
 
 
 
-
 .transparent {
      border-width: 0px;
     -webkit-box-shadow: 0px 0px;
@@ -181,7 +94,7 @@ background-color: blue}
     background-image: linear-gradient(180deg,rgba(0,0,0,0.00) 0%,rgba(0,0,0,0.00) 100%);
 }
 
-#custom-search-input{
+/*#custom-search-input{
     padding: 3px;
     border: solid 1px #E4E4E4;
     border-radius: 6px;
@@ -233,9 +146,7 @@ background-color: blue}
   background-color: #8ac7d8;
 }
 
-body {
-  background: #3CC;
-}
+
 
 .container {
   display: -webkit-flex;
@@ -313,4 +224,4 @@ h1, input {
 }
 .inputButton:focus {
   outline: none;
-}
+}*/
