--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,30 +1,32 @@
 
 <div  class="container">
+    <h1>Vous partez en voyage ? Réservez des logements uniques et vivez là-bas comme des locaux.</h1>
+    <p></p>
+<!-- 
+    <div class="input-group input-group-lg">
+       <input type="text" class="form-control" placeholder="Search for...">
+          <span class="input-group-btn">
+            <button class="btn btn-default" type="button">Go!</button>
+          </span>
+    </div> -->
 
-<div  class="container">
 
-<h1>Vous partez en voyage ? Réservez des logements uniques et vivez là-bas comme des locaux.</h1>
-<p></p>
-<div class="container">
-<div class="input-group input-group-lg">
-   <input type="text" class="form-control" placeholder="Search for...">
-      <span class="input-group-btn">
-        <button class="btn btn-default" type="button">Go!</button>
-      </span>
+
+<%= form_tag users_path, method: :get, class: 'form-group' do %>
+  <%= text_field_tag :query, params[:query], class: 'form-control search-bar' %>
+  <%= submit_tag "GO", name: nil, class: 'btn btn-default submit-button' %>
+<% end %>
+
 </div>
 
+  <p></p>
 
 
-</div>
 
-<p></p>
-<p></p>
-<div  class="container center row">
+
+<div class="container row centrer">
 
 <% @listings.each do |l| %>
-
-
-
 
     <div style="margin-top: 48px; margin-bottom: 48px;">
       <div class="col-xs-6 col-sm-4 col-md-4 col-lg-4">
@@ -54,12 +56,11 @@
           </div>
         </div>
       
-      
        </div>
-</div>
+    </div>
     <% end %>
 </div>
     <%= paginate @listings %>
-    </div>
+</div>
 
     
